# OpenCVLearning

./: .gitignore  README.md
PersonService/: CMakeLists.txt  Dockerfile  Main.cpp  Makefile
PersonService/person/: HPerson.cpp  HPerson.h
PersonService/utils/file/: directory.cpp  directory.h  test_directory.cpp
demo/: CMakeLists.txt  Dockerfile  Main.cpp  Makefile
demo/camera/: CMakeLists.txt  HCamera.cpp  HCamera.h
demo/console/: YConsole.cpp  YConsole.h
demo/devices/camera/: DahuaCamera.cpp  DahuaCamera.h  HCamera.cpp  HCamera.h
demo/devices/vedio/: YVedio.cpp  YVedio.h
demo/imageProc/: CMakeLists.txt  HImage.cpp  HImage.h  HMatrix.cpp  HMatrix.h
demo/person/: CMakeLists.txt
demo/person/body/: YBody.cpp  YBody.h
demo/person/face/: YFace.cpp  YFace.h
demo/person/interface/: YPerson.cpp  YPerson.h
demo/utils/: CMakeLists.txt
demo/utils/log/: easylogging++.cc
